[package]
name = "cosmos-query"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
layer-wasi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
layer-climb-proto = { workspace = true }
layer-climb-address = { workspace = true }
layer-climb-config = { workspace = true }
wstd = { workspace = true }
tendermint-rpc = { workspace = true }
tendermint = { workspace = true }
wit-bindgen-rt = { workspace = true }
example-helpers = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:cosmos-query"