[package]
name = "cosmos-query"
edition.workspace = true
version = "0.0.2"
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wavs-wasi-chain = { workspace = true }
layer-climb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
wstd = { workspace = true }
example-helpers = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wavs-tests:cosmos-query"
