[package]
name = "echo-block-interval"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
example-helpers = { workspace = true }
example-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:echo-block-interval"