[package]
name = "echo-raw"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
layer-wasi = { workspace = true }
wit-bindgen-rt = { workspace = true }
example-helpers = { workspace = true }
wstd = { workspace = true }
anyhow = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:echo-raw"