[package]
name = "kv-store"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
example-helpers = { workspace = true }
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wavs-tests:kv-store"