[package]
name = "permissions"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wavs-wasi-chain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
example-helpers = { workspace = true }
wstd = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:permissions"
