[package]
name = "simple-aggregator"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen = { workspace = true }
alloy-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wavs-wasi-utils = { workspace = true }
wstd = { workspace = true }
alloy-network = { workspace = true }
alloy-provider = { workspace = true }
anyhow = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wavs-tests:simple-aggregator"
