[package]
name = "simple-aggregator"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen = { workspace = true }
alloy-primitives = { workspace = true }
serde = { workspace = true }
wavs-wasi-utils = { workspace = true }
wstd = { workspace = true }
layer-climb-address = { workspace = true }
wavs-types = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wavs-tests:simple-aggregator"
