[package]
name = "square"
edition.workspace = true
version = "0.1.0"
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
example-helpers = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "macovedj:square"
