[package]
name = "square"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde_json = { workspace = true }
example-helpers = { workspace = true }
example-types = { workspace = true }

[lib]
crate-type = ["rlib", "cdylib"]

[package.metadata.component]
package = "wavs-tests:square"
