[package]
name = "timer-aggregator"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wstd = { workspace = true }
wit-bindgen = { workspace = true }
alloy-primitives = { workspace = true }
wavs-wasi-utils = { workspace = true }
alloy-network = { workspace = true }
alloy-provider = { workspace = true }
wasip2 = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wavs-tests:timer-aggregator"
